# mscw-opening-ai-python

./: README.md  pyproject.toml
configs/: opening_default.yaml
configs/versions/: mscw_default.yaml
mscw_ai/: __init__.py
mscw_ai/etl/: dataset_builder.py
mscw_ai/guide/: generator.py
mscw_ai/planner/: __init__.py  actions.py  beam_search.py  equipment_requirements.py  job_profiles.py  models.py  skills.py
mscw_ai/rl/: q_learning.py
mscw_ai/sim/: accuracy.py  environment.py  environment_v2.py  exp_table.py  map_rules.py
mscw_ai/utils/: io.py
mscw_ai/versioning/: __init__.py  rules.py
scripts/: build_dataset.py  debug_candidate_maps.py  generate_guide.py  plan_route.py  train_rl.py
