[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mscw-opening-ai"
version = "0.1.0"
description = "Python ETL, simulator, RL, and guide generator for MapleStory Classic World opening-route AI."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "tqdm>=4.66"
]

[project.optional-dependencies]
ml = ["torch>=2.2", "gymnasium>=0.29"]
web = ["playwright>=1.44"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
include = ["mscw_ai*"]
exclude = ["configs*", "scripts*", "data*", "outputs*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
